--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="separate">
             <div class="site">
                 <a class="leetcode" id="leetcode" href="https://leetcode.com/u/PRASHANT_KUMAR03/">
-                    <img class="img1" src="assets/leetcode.png">
+                    <img class="img1" src="assets/leetcode.jpg">
                 </a>
             </div>
             <div class="leetwrite">
@@ -79,7 +79,7 @@
         <div class="separate">
             <div class="site">
                 <a class="codeforces" id="codeforces" href="https://codeforces.com/profile/PrashantKumar2003">
-                    <img class="img2" src="assets/codeforces.png">
+                    <img class="img2" src="assets/codeforces.jpg">
                 </a>
             </div>
             <div class="leetwrite">
@@ -94,7 +94,7 @@
         <div class="separate">
             <div class="site">
                 <a class="atcoder" id="atcoder" href="https://atcoder.jp/users/UndefeatedWolf">
-                    <img class="img3" src="assets/atcoder.png">
+                    <img class="img3" src="assets/atcoder.jpg">
                 </a>
             </div>
             <div class="leetwrite">
@@ -115,7 +115,7 @@
             
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img src="assets/abhinav-final.png" alt="Abhinav singh">
+                    <img src="assets/abhinav-final.jpg" alt="Abhinav singh">
                     <h2>Abhinav Singh</h2>
                     <h3>NIT-B (ECE)</h3>
                     <div class="rating">
