--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="https://www.instagram.com/prashant_dwivedi03/"<i class='bx bxl-instagram' ></i></a>
                     <a href="https://x.com/optimistic_b13?t=PM1gmO8bOdJlFRQya70G-g&s=08"<i class='bx bxl-twitter' ></i></a>
                 </div>
-                <a href="file:///C:/Users/kumar/Downloads/prashant_286_resume%20(1)%20(5).pdf" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1v91OVZvYoeURRGWqturE76kJYoY_FqMm/view?usp=sharing" class="btn">Download CV</a>
         </div>
     </section>
     <!--About section code -->
